# tauri-plugin-turso

./: AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  SKILL.md  blog-post.md  package.json
.journal/: 2026-02-25.md  2026-03-06.md
.repowiki/en/content/: Getting Started Guide.md  System Overview.md  Technology Stack.md
.repowiki/en/content/Architecture/: Architecture.md
.repowiki/en/content/Backend/: Backend Services.md
.repowiki/en/content/Frontend/: Frontend Application.md
examples/todo-list/: README.md  README.zh-CN.md  package.json  vite.config.js
examples/todo-list/src/: App.svelte
examples/todo-list/src-tauri/: Cargo.toml  tauri.conf.json
examples/todo-list/src-tauri/capabilities/: default.json
examples/todo-list/src-tauri/src/: lib.rs
examples/todo-list/src/lib/: TodoList.svelte  db.ts
guest-js/: AGENTS.md  drizzle.ts  index.ts  migrate.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: AGENTS.md  commands.rs  decode.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  wrapper.rs
